--- a/ColdCallsTracker/ColdCallsTracker/Pages/Companies/Edit.cshtml
+++ b/ColdCallsTracker/ColdCallsTracker/Pages/Companies/Edit.cshtml
@@ -1,6 +1,6 @@
 ﻿@using ColdCallsTracker.Code.Data.Models
 @using ColdCallsTracker.Code.Utils
-@model List<ColdCallsTracker.Code.Data.ViewModels.QuoteTemplateItem>
+@model ColdCallsTracker.Code.Data.ViewModels.EditCompanyPageModel
 
 @{
     ViewBag.Title = "Редактирование компании";
@@ -17,6 +17,9 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.inputmask/3.3.4/inputmask/inputmask.dependencyLib.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.inputmask/3.3.4/inputmask/inputmask.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/vue-inputmask@0.2.1/dist/vue-inputmask-browser.js"></script>
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.6-rc.0/css/select2.min.css" rel="stylesheet" />
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.6-rc.0/js/select2.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/vue-select2@0.2.6/dist/vue-select.min.js"></script>
 
     <script src="~/js/companies/quotes-management.js" asp-append-version="true"></script>
     <script src="~/js/companies/edit-company.js" asp-append-version="true"></script>
@@ -138,7 +141,7 @@
                     Добавить смету из шаблона
                 </button>
                 <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-                    @foreach (var item in Model)
+                    @foreach (var item in Model.QuoteTemplates)
                     {
                         <a class="dropdown-item" v-on:click="addQuoteFromTemplate(@item.Id)" href="javascript:;">
                             @item.Name - @(Math.Round(item.Total).ToString("N0")) р.
@@ -166,7 +169,29 @@
                         <table class="table-xs table table-bordered table-hover table-striped mb-0">
                             <thead class="thead-dark">
                                 <tr>
-                                    <th class="id">#</th>
+                                    <th class="id costing-template-select-cell pt-1">
+                                        <select v-model="quote.SelectedCostingTemplateId" v-bind:class="'costings-template-select-' + quote.Id" class="form-control-sm form-control">
+                                            <option value=""></option>
+                                            @foreach (var costingTemplate in Model.CostingTemplates.OrderBy(x => x.CategoryName).ThenBy(x => x.Name))
+                                            {
+                                                <option value="@costingTemplate.Id">
+                                                    [@costingTemplate.CategoryName] @costingTemplate.Name
+                                                    @if (costingTemplate.Qty > 0)
+                                                    {
+                                                        <text>| @costingTemplate.Qty @costingTemplate.UnitName</text>
+                                                    }
+                                                    @if (costingTemplate.Cost > 0)
+                                                    {
+                                                        <text>| Кол: @costingTemplate.Cost</text>
+                                                    }
+                                                    @if (costingTemplate.Total > 0)
+                                                    {
+                                                        <text>| Цена: @((costingTemplate.Total ?? 0).ToString("N0"))</text>
+                                                    }
+                                                </option>
+                                            }
+                                        </select>
+                                    </th>
                                     <th class="category">Категория</th>
                                     <th>Название услуги</th>
                                     <th class="qty">Кол. ед</th>
@@ -193,7 +218,9 @@
                             </thead>
                             <tbody>
                                 <tr class="table-info">
-                                    <td></td>
+                                    <td>
+                                        <div class="small-costing-add">Новая затрата</div>
+                                    </td>
                                     <td>
                                         <select v-model="newCosting.CategoryId" class="form-control form-control-xs">
                                             @foreach (var el in EnumUtil.ToDictionary<CostingCategoryEnum>())
@@ -354,3 +381,18 @@
         </div>
     </div>
 </div>
+
+
+<br />
+<br />
+<br />
+<br />
+<br />
+<br />
+<br />
+<br />
+<br />
+<br />
+<br />
+<br />
+<br />
