--- a/ColdCallsTracker/ColdCallsTracker/Pages/Companies/Index.cshtml
+++ b/ColdCallsTracker/ColdCallsTracker/Pages/Companies/Index.cshtml
@@ -126,7 +126,7 @@
                 </th>
                 <th v-on:click="applySorting(config.columns.LastCallRecordDate)"
                     v-bind:class="{ 'order-column': !!config.columns.LastCallRecordDate.sorting, 'asc' : config.columns.LastCallRecordDate.sorting == 'asc',  'desc' : config.columns.LastCallRecordDate.sorting == 'desc'   }" class="sorting-th">
-                    Последняя запись
+                    Изменено
                     <i class="fas fa-sort-up sort-arrow"></i>
                     <i class="fas fa-sort-down sort-arrow"></i>
                 </th>
