--- a/ColdCallsTracker/ColdCallsTracker/wwwroot/css/site.css
+++ b/ColdCallsTracker/ColdCallsTracker/wwwroot/css/site.css
@@ -479,3 +479,18 @@ tr:hover .remove-costing-item {
     padding-left: 4px;
     padding-right: 4px;
 }
+
+.org-name-col {
+    position: relative !important;
+}
+
+.companies-list-page .org-search-link {
+    position: absolute;
+    right: 2px;
+    top: 4px;
+    visibility: hidden;
+}
+
+tr:hover .org-search-link {
+    visibility: visible;
+}
